# factory-machine-model

./: Cargo.toml  README.md  mise.toml
.github/workflows/: mise-upgrade.yml  mise.yml
src/: dyn_driver.rs  identification.rs  job.rs  lib.rs  state.rs  telemetry.rs
